2003-05-21  Havoc Pennington  <hp@pobox.com>

	* NEWS: update

	* configure.in: 2.4.55

2003-05-20  Havoc Pennington  <hp@pobox.com>
	
	* src/keybindings.c (meta_change_keygrab): the mask 
	display->ignored_modifier_mask wasn't being bound, 
	due to "<" instead of "<=" (most people didn't notice
	as display->ignored_modifier_mask included Scroll_Lock).
	Red Hat bugzilla #91301 reported by Youssef Makki

	* src/display.c (meta_change_button_grab): make corresponding
	change for button grabs.

2003-05-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

Fri Mar 28 15:39:35 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* src/window.c (update_resize): Don't cap refresh rate.  Fixes
	problem with my last commit, where the window could get stuck with
	a wrong size until you released the button.

Fri Mar 28 14:13:37 2003  Soeren Sandmann  <sandmann@daimi.au.dk>
 	
	* src/window.c (update_resize): Only cap refresh rate when not
	using SYNC. Remove bogus update-if-we-moved-more-than-a-delta.
 
	* src/window.c (update_move): Don't cap refresh rate during
	moves. Remove bogus update-if-we-moved-more-than-a-delta.
 
Sun Mar 23 23:10:42 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* src/display.c (meta_spew_event): just return if we are not
	verbose

2003-03-11  Havoc Pennington  <hp@pobox.com>

	Should fix #108108, #106217, tracked down by Owen Taylor and
	Frederic Crozat
	
	* src/window.c (meta_window_foreach_transient): change
	MetaWindowForeachFunc to return a boolean for whether to continue
	(meta_window_foreach_ancestor): new function
	(window_should_be_showing): use meta_window_foreach_ancestor	
	(unminimize_window_and_all_transient_parents): ditto
	(update_sm_hints): ditto
	(meta_window_is_ancestor_of_transient): ditto

	* src/stack.c (get_maximum_layer_of_ancestor): use
	meta_window_foreach_ancestor

2003-03-13  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ml" to ALL_LINGUAS.
