@@ -1,3 +1,9 @@
+2003-06-07  Havoc Pennington  <hp@pobox.com>
+
+	* src/window.c (meta_window_notify_focus): drop the mouse button
+	grabs for the focused window; we'll see if this breaks anything. 
+	It should fix #102209
+
 2003-05-21  Havoc Pennington  <hp@pobox.com>
 
 	* NEWS: update
